feat: add environment variables
